fix: form-check color + notification mobile bottom position

--- a/src/components/component-view/component-view.scss
+++ b/src/components/component-view/component-view.scss
@@ -7,7 +7,23 @@ pre {
 .accordion.accordion-left-icon .accordion-header .accordion-button::before {
     width:1rem;
 }
-
+.split-code-checkbox {
+    .form-check {
+        label {
+            color: white;
+            font-size: 1rem !important;
+            background-color: rgb(43, 43, 43);
+            &::after {
+                border-color: white !important;
+            }
+        }
+    }
+}
+.responsive-buttons {
+    .btn-group > .btn-group:not(:first-child), .btn-group > .btn:not(:first-child) {
+        margin-left: -2px!important;
+    }
+}
 .iframe-example {
     transition-property: height, max-width, width;
     transition-duration: 500ms;
@@ -16,17 +32,6 @@ pre {
         min-height: 350px;
     }
 }
-
-.form-check {
-    label {
-        color: white;
-        font-size: 1rem !important;
-        &::after {
-            border-color: white !important;
-        }
-    }
-}
-
 .viewer-mobile {
     max-width: 360px;
 }
@@ -37,22 +42,30 @@ pre {
     max-width: 1280px;
 }
 
-.responsive-buttons {
-    .btn-group > .btn-group:not(:first-child), .btn-group > .btn:not(:first-child) {
-        margin-left: -2px!important;
+//mobile only ------------------------------------------------------------------------------------------
+@include media-breakpoint-down(sm) {
+    .notification {
+        bottom: 40px;
+    }
+}
+  
+//Small tablet ------------------------------------------------------------------------------------------
+@include media-breakpoint-up(sm) {
+    .notification {
+        bottom: 40px;
     }
 }
 
 //Tablet landscape --------------------------------------------------------------------------------------
 @include media-breakpoint-up(lg) {
-    .no-left-margin {
-      margin-left: -1.5rem;
+    .component-viewer .no-left-margin {
+    margin-left: -1.5rem;
     }
-  }
-  
-  //Laptop ------------------------------------------------------------------------------------------------
-  @include media-breakpoint-up(xl) {
-    .no-left-margin {
-      margin-left: -3rem;
+}
+
+//Laptop ------------------------------------------------------------------------------------------------
+@include media-breakpoint-up(xl) {
+    .component-viewer .no-left-margin {
+        margin-left: -3rem;
     }
-  }
+}
